--- a/docs/styles.css
+++ b/docs/styles.css
@@ -2181,10 +2181,6 @@ video {
   }
 }
 
-.oyw-image{
-  height: 90%;
-}
-
 .oyw-collaboration{
   margin-left: 10%;
   margin-right: 10%;
@@ -2194,5 +2190,174 @@ video {
   color: #08979C;
 }
 
+.rectangle2{
+  width: 962px;
+  height: 400px;
+  margin-left: auto;
+  margin-right: auto;
+  background: #F0F9F6;
+  border-radius: 5px;
+}
 
+.testimonial-margin {
+  position: absolute;
+  margin-top: 5%;
+  margin-left: 20%;
+  margin-right: 20%;
+}
+.oyw-testimonial-semicolon{
+  position: absolute;
+  margin-left: 5%;
+  margin-top: 5%;
+}
+
+.oyw-testimonial-name {
+  position: absolute;
+  margin-top: 15%;
+  margin-left: 20%;
+  width: 50%;
+}
+.column {
+  float: left;
+  width: 50%;
+  padding: 10px;
+  height: 300px; /* Should be removed. Only for demonstration */
+}
+
+.column-ambassadors {
+  float: left;
+  width: 33.33%;
+  padding: 10px;
+  height: 300px; /* Should be removed. Only for demonstration */
+}
+
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+* {box-sizing:border-box}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
+/* Hide the images by default */
+.mySlides {
+  display: none;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  margin-left: -5%;
+  margin-right: -5%;
+  padding: 16px;
+  color: #00B696;
+  font-weight: bold;
+  font-size: 30px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+.prev-ambassadors, .next-ambassadors {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  margin-left: 0%;
+  margin-right: -6%;
+  padding: 16px;
+  color: #00B696;
+  font-weight: bold;
+  font-size: 30px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+.next-ambassadors {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  color: #006a57;
+}
+
+.prev-ambassadors:hover, .next-ambassadors:hover {
+  color: #006a57;
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
 /* End with OYW.html */
