--- a/docs/styles.css
+++ b/docs/styles.css
@@ -2190,9 +2190,27 @@ video {
   color: #08979C;
 }
 
-.rectangle2{
+.rectangle-gonzalo{
+  width: 962px;
+  height: 500px;
+  margin-left: auto;
+  margin-right: auto;
+  background: #F0F9F6;
+  border-radius: 5px;
+}
+
+.rectangle-annelisse {
   width: 962px;
   height: 400px;
+  margin-left: auto;
+  margin-right: auto;
+  background: #F0F9F6;
+  border-radius: 5px;
+}
+
+.rectangle-marcos{
+  width: 962px;
+  height: 730px;
   margin-left: auto;
   margin-right: auto;
   background: #F0F9F6;
@@ -2213,7 +2231,21 @@ video {
 
 .oyw-testimonial-name {
   position: absolute;
+  margin-top: 30%;
+  margin-left: 20%;
+  width: 50%;
+}
+
+.oyw-testimonial-name-small{
+  position: absolute;
   margin-top: 15%;
+  margin-left: 20%;
+  width: 50%;
+}
+
+.oyw-testimonial-marcos{
+  position: absolute;
+  margin-top: 55%;
   margin-left: 20%;
   width: 50%;
 }
